--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
